Add cards row three and for

--- a/code/index.html
+++ b/code/index.html
@@ -179,7 +179,7 @@
                     <figure>
                       <img
                         src="../img/climbingCat.jpg"
-                        class="img-other-news-two"
+                        class="img-other-news"
                         alt="A cat climbing"
                       />
                       <figcaption class="figcaption-other-news">
@@ -223,7 +223,7 @@
                       <figure>
                         <img
                           src="../img/outoodoorYogaCat.jpg"
-                          class="img-other-news-one"
+                          class="img-other-news"
                           alt="A cat doing yoga outdoors"
                         />
                         <figcaption class="figcaption-other-news">
@@ -264,7 +264,7 @@
                     <figure>
                       <img
                         src="../img/walkingCat.jpeg"
-                        class="img-other-news-three"
+                        class="img-other-news"
                         alt="A cat walking"
                       />
                       <figcaption class="figcaption-other-news">
@@ -299,7 +299,7 @@
                     <figure>
                       <img
                         src="../img/crunchingCat.jpg"
-                        class="img-other-news-four"
+                        class="img-other-news"
                         alt="A cat doing crunches"
                       />
                       <figcaption class="figcaption-other-news">
