--- a/code/tips.html
+++ b/code/tips.html
@@ -188,7 +188,7 @@
                     <figure>
                       <img
                         src="../img/bb1.jpg"
-                        class="img-other-news-two"
+                        class="img-other-news"
                         alt="A cat climbing"
                       />
                       <figcaption class="figcaption-other-news">
@@ -220,7 +220,7 @@
                       <figure>
                         <img
                           src="../img/bb2.jpg"
-                          class="img-other-news-one"
+                          class="img-other-news"
                           alt="A cat doing yoga outdoors"
                         />
                         <figcaption class="figcaption-other-news">
@@ -258,7 +258,7 @@
                     <figure>
                       <img
                         src="../img/bb3.jpg"
-                        class="img-other-news-three"
+                        class="img-other-news"
                         alt="A cat walking"
                       />
                       <figcaption class="figcaption-other-news">
@@ -290,7 +290,7 @@
                     <figure>
                       <img
                         src="../img/bb4.jpg"
-                        class="img-other-news-four"
+                        class="img-other-news"
                         alt="A cat doing crunches"
                       />
                       <figcaption class="figcaption-other-news">
@@ -333,7 +333,7 @@
                     <figure>
                       <img
                         src="../img/bb5.jpg"
-                        class="img-other-news-two"
+                        class="img-other-news"
                         alt="A cat climbing"
                       />
                       <figcaption class="figcaption-other-news">
@@ -371,7 +371,7 @@
                       <figure>
                         <img
                           src="../img/bb6.jpg"
-                          class="img-other-news-one"
+                          class="img-other-news"
                           alt="A cat doing yoga outdoors"
                         />
                         <figcaption class="figcaption-other-news">
@@ -415,7 +415,7 @@
                     <figure>
                       <img
                         src="../img/bb7.jpg"
-                        class="img-other-news-three"
+                        class="img-other-news"
                         alt="A cat walking"
                       />
                       <figcaption class="figcaption-other-news">
@@ -444,7 +444,324 @@
                     <figure>
                       <img
                         src="../img/bb8.jpg"
-                        class="img-other-news-four"
+                        class="img-other-news"
+                        alt="A cat doing crunches"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Malmö</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review">
+                        <q>Great breakfast!</q>
+                      </p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/bb9.jpg"
+                        class="img-other-news"
+                        alt="A cat climbing"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Umeå</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <div>
+                        <p class="review">
+                          <q>Siberia? Too cold to be outside</q>
+                        </p>
+                        <div class="icon-div">
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                        </div>
+                      </div>
+                      <figure>
+                        <img
+                          src="../img/bb10.jpg"
+                          class="img-other-news"
+                          alt="A cat doing yoga outdoors"
+                        />
+                        <figcaption class="figcaption-other-news">
+                          <em>Photo:</em><em>Smirre Archives</em>
+                        </figcaption>
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Malmö Best Western</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review">
+                        <q>Ok patio but no sun</q>
+                      </p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/bb11.jpg"
+                        class="img-other-news"
+                        alt="A cat walking"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Malmö Spa</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review"><q>Pay per view too expensive</q></p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/bb12.jpg"
+                        class="img-other-news"
+                        alt="A cat doing crunches"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Malmö Spa</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review">
+                        <q>Excellent yoga equipment</q>
+                      </p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/bb13.jpg"
+                        class="img-other-news"
+                        alt="A cat climbing"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Umeå</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <div>
+                        <p class="review">
+                          <q>So romantic! But excruiatingly cold</q>
+                        </p>
+                        <div class="icon-div">
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                          <i class="material-icons pets" aria-hidden="true"
+                            >pets</i
+                          >
+                        </div>
+                      </div>
+                      <figure>
+                        <img
+                          src="../img/bb14.jpg"
+                          class="img-other-news"
+                          alt="A cat doing yoga outdoors"
+                        />
+                        <figcaption class="figcaption-other-news">
+                          <em>Photo:</em><em>Smirre Archives</em>
+                        </figcaption>
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Malmö</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review">
+                        <q>Warm and sunny patio</q>
+                      </p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/bb15.jpg"
+                        class="img-other-news"
+                        alt="A cat walking"
+                      />
+                      <figcaption class="figcaption-other-news">
+                        <em>Photo:</em><em>Smirre Archives</em>
+                      </figcaption>
+                    </figure>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <h4>Malmö Spa</h4>
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="other-news-div">
+                  <div class="card">
+                    <div>
+                      <p class="review"><q>Excellent yoga studio</q></p>
+                      <div class="icon-div">
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
+                    </div>
+                    <figure>
+                      <img
+                        src="../img/bb16.jpg"
+                        class="img-other-news"
                         alt="A cat doing crunches"
                       />
                       <figcaption class="figcaption-other-news">
