--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Re do my webiste 📰 Recent trends in design ✨ </title>
+    <title>Design Time 📰 Recent trends in design ✨ </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
