--- a/code/index.html
+++ b/code/index.html
@@ -4,18 +4,29 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content width="device-width" initial-scale="1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
-  <body>
-    <header>
+  <body 
+  
+  <section class="header">
+
+    <img src="logonews.png" alt="min logo"/>
+    <h1>Fake News Headquarter</h1>
+    <header> Test på header</header>
+    
       <!-- Some kind of logo and navbar -->
-    </header>
+   
+  
+  </section>
 
     <section class="big-news">
+      <main class="big-news-content"
+      <nav class="big-news-nav"></nav
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
     </section>
   </body>
